app-of-apps/apps/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fl-nginx
  labels:
    app.kubernetes.io/name: fl-nginx
    app.kubernetes.io/part-of: fl-app-of-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fl-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fl-nginx
    spec:
      containers:
        - name: fl-nginx
          image: nginx:1.29.1-alpine
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
